add deletions to the ignore

--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,5 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+"ipynotebooks/20151116_BACKUP_website_processes/wps/CHN_adm/CHN_adm.gpkg" 
+"ipnotebooks/Python2.7/output.tif" 
